# OpenGL_Clock

./: CMakeLists.txt  README.md  main.c  shader.c
Include/: clock.h  matrix.h  model.h  shader.h
shaders/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader
src/: clock.c  main.c  matrix.c  model.c  shader.c
